tests/toy/neg/001447_mutation.toylang
program a = { var a : int var; } .
